// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndemniteCCn /> should render error 1`] = `
.c1 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <div
    class="c1"
  >
    lorem ipsum
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité conventionnelle 1`] = `
.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c13 {
  margin: 1.6rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: block;
  margin-bottom: 1.6rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 0.021);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 0.021);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1"
    >
      2 000,00
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          42,00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            anciennete (A)
             : 
            32
          </li>
          <li
            class="c11"
          >
            salaire ref (Sref)
             : 
            42
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math
                        display="block"
                        xmlns="http://www.w3.org/1998/Math/MathML"
                      >
                        <semantics>
                          <mrow>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              A
                            </mi>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            Sref \\times A
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          re
                        </span>
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.68333em;vertical-align:0em;"
                        />
                        <span
                          class="mord mathnormal"
                        >
                          A
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c15"
        />
        <span
          class="c6"
        >
          2 000,00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            foo
             : 
            bar
          </li>
          <li
            class="c11"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math
                        display="block"
                        xmlns="http://www.w3.org/1998/Math/MathML"
                      >
                        <semantics>
                          <mrow>
                            <mn>
                              1337
                            </mn>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              f
                            </mi>
                            <mi>
                              o
                            </mi>
                            <mi>
                              o
                            </mi>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            1337 \\times Sref \\times foo
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.72777em;vertical-align:-0.08333em;"
                        />
                        <span
                          class="mord"
                        >
                          1337
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          re
                        </span>
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          oo
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité legale 1`] = `
.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c13 {
  margin: 1.6rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: block;
  margin-bottom: 1.6rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 0.5348);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 0.5348);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1"
    >
      2 500,00
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          2 500,00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            anciennete (A)
             : 
            32
          </li>
          <li
            class="c11"
          >
            salaire ref (Sref)
             : 
            42
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math
                        display="block"
                        xmlns="http://www.w3.org/1998/Math/MathML"
                      >
                        <semantics>
                          <mrow>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              A
                            </mi>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            Sref \\times A
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          re
                        </span>
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.68333em;vertical-align:0em;"
                        />
                        <span
                          class="mord mathnormal"
                        >
                          A
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c15"
        />
        <span
          class="c6"
        >
          1 337,00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            foo
             : 
            bar
          </li>
          <li
            class="c11"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math
                        display="block"
                        xmlns="http://www.w3.org/1998/Math/MathML"
                      >
                        <semantics>
                          <mrow>
                            <mn>
                              1337
                            </mn>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              f
                            </mi>
                            <mi>
                              o
                            </mi>
                            <mi>
                              o
                            </mi>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            1337 \\times Sref \\times foo
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.72777em;vertical-align:-0.08333em;"
                        />
                        <span
                          class="mord"
                        >
                          1337
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          re
                        </span>
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mspace"
                          style="margin-right:0.2222222222222222em;"
                        />
                      </span>
                      <span
                        class="base"
                      >
                        <span
                          class="strut"
                          style="height:0.8888799999999999em;vertical-align:-0.19444em;"
                        />
                        <span
                          class="mord mathnormal"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord mathnormal"
                        >
                          oo
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
